--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,8 @@
             android:layout_gravity="right" />
 
         <TextView
-            android:id="@+id/textView1"
-            android:layout_width="fill_parent"
+            android:id="@+id/olleView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="100dp"
             android:text="@string/text_olle" />
