--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/pinkLayout"
         android:layout_width="fill_parent"
         android:layout_height="210dp"
-        android:background="#FF8989"
+        android:background="#FFFFFFFF"
         android:orientation="vertical" >
 
         <TextView
@@ -48,7 +48,7 @@
         android:layout_width="fill_parent"
         android:layout_height="250dp"
         android:layout_marginTop="210dp"
-        android:background="#FFCC00"
+        android:background="#FFFFFFFF"
         android:orientation="vertical" >
     </LinearLayout>
 
